# django-offload-with-logs

./: .pypirc  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
django_offload_with_logs/: __init__.py  admin.py  apps.py  decorators.py  middleware.py  models.py  signals.py  store.py  urls.py  views.py
django_offload_with_logs/migrations/: 0001_initial.py  0002_add_extra_fields.py
django_offload_with_logs/static/django_offload_with_logs/: offload_js.js
django_offload_with_logs/templatetags/: offload_tags.py
